feat(tenant): add policy validation, provisioning, and plan upgrade services
Add PolicyDataValidator for JSON schema validation with system minimum
checks, TenantProvisioningService for auto-creating default policies and
features on tenant creation, and PlanUpgradeService for syncing features
on plan changes. Update TenantPolicyServiceImpl with validation, default
fallback, and event publishing. Update TenantFeatureServiceImpl with
plan-based feature restriction and event publishing.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>